--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-scripts": "^2.5.0",
+    "egg-view-nunjucks": "^2.2.0",
+    "github-markdown-css": "^2.10.0"
   },
   "devDependencies": {
     "@vuepress/shared-utils": "^1.0.0-alpha.0",
