--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "description": "none",
   "private": true,
   "dependencies": {
+    "chalk": "^2.4.1",
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
     "egg-view-nunjucks": "^2.2.0",
-    "github-markdown-css": "^2.10.0"
+    "escape-html": "^1.0.3",
+    "fs-extra": "^7.0.1",
+    "github-markdown-css": "^2.10.0",
+    "globby": "^8.0.1",
+    "gray-matter": "^4.0.1",
+    "hash-sum": "^1.0.2",
+    "js-yaml": "^3.12.0",
+    "upath": "^1.1.0"
   },
   "devDependencies": {
     "@vuepress/shared-utils": "^1.0.0-alpha.0",
