--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "escape-html": "^1.0.3",
     "fs-extra": "^7.0.1",
     "github-markdown-css": "^2.10.0",
+    "glob": "^7.1.3",
     "globby": "^8.0.1",
     "gray-matter": "^4.0.1",
     "hash-sum": "^1.0.2",
     "js-yaml": "^3.12.0",
+    "ppt-png": "^0.2.4",
     "upath": "^1.1.0"
   },
   "devDependencies": {
