--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hash-sum": "^1.0.2",
     "js-yaml": "^3.12.0",
     "ppt-png": "^0.2.4",
+    "svg-captcha": "^1.3.11",
     "upath": "^1.1.0"
   },
   "devDependencies": {
