--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "egg": "^2.2.1",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "egg-view-nunjucks": "^2.2.0",
     "escape-html": "^1.0.3",
@@ -16,6 +17,7 @@
     "gray-matter": "^4.0.1",
     "hash-sum": "^1.0.2",
     "js-yaml": "^3.12.0",
+    "koa-better-body": "^3.0.4",
     "svg-captcha": "^1.3.11",
     "upath": "^1.1.0"
   },
