--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "none",
   "private": true,
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "chalk": "^2.4.1",
     "egg": "^2.2.1",
     "egg-mysql": "^3.0.0",
@@ -18,8 +19,10 @@
     "hash-sum": "^1.0.2",
     "js-yaml": "^3.12.0",
     "koa-better-body": "^3.0.4",
+    "moment": "^2.22.2",
     "svg-captcha": "^1.3.11",
-    "upath": "^1.1.0"
+    "upath": "^1.1.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@vuepress/shared-utils": "^1.0.0-alpha.0",
