--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^3.12.0",
     "koa-better-body": "^3.0.4",
     "moment": "^2.22.2",
+    "nodemailer": "^4.7.0",
     "svg-captcha": "^1.3.11",
     "upath": "^1.1.0",
     "uuid": "^3.3.2"
