--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^3.0.2",
     "chalk": "^2.4.1",
     "egg": "^2.2.1",
+    "egg-jwt": "^3.1.4",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "egg-view-nunjucks": "^2.2.0",
@@ -18,7 +19,9 @@
     "gray-matter": "^4.0.1",
     "hash-sum": "^1.0.2",
     "js-yaml": "^3.12.0",
+    "jsonwebtoken": "^8.4.0",
     "koa-better-body": "^3.0.4",
+    "koa-jwt": "^3.5.1",
     "moment": "^2.22.2",
     "nodemailer": "^4.7.0",
     "svg-captcha": "^1.3.11",
