--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.4.0",
     "koa-better-body": "^3.0.4",
+    "koa-body": "^4.0.4",
     "koa-jwt": "^3.5.1",
     "moment": "^2.22.2",
     "nodemailer": "^4.7.0",
