--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "egg-jwt": "^3.1.4",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
+    "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.2.0",
     "escape-html": "^1.0.3",
     "fs-extra": "^7.0.1",
