--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-body": "^4.0.4",
     "koa-jwt": "^3.5.1",
     "moment": "^2.22.2",
+    "mysql2": "^1.6.4",
     "nodemailer": "^4.7.0",
     "svg-captcha": "^1.3.11",
     "upath": "^1.1.0",
