--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "koa-jwt": "^3.5.1",
     "moment": "^2.22.2",
     "mysql2": "^1.6.4",
+    "mz-modules": "^2.1.0",
     "nodemailer": "^4.7.0",
+    "stream-wormhole": "^1.1.0",
     "svg-captcha": "^1.3.11",
     "upath": "^1.1.0",
     "uuid": "^3.3.2"
