--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "koa-body": "^4.0.4",
     "koa-jwt": "^3.5.1",
     "moment": "^2.22.2",
+    "moment-precise-range-plugin": "^1.3.0",
     "mysql2": "^1.6.4",
     "mz-modules": "^2.1.0",
+    "node-xlsx": "^0.12.1",
     "nodemailer": "^4.7.0",
     "stream-wormhole": "^1.1.0",
     "svg-captcha": "^1.3.11",
