--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-better-body": "^3.0.4",
     "koa-body": "^4.0.4",
     "koa-jwt": "^3.5.1",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "moment-precise-range-plugin": "^1.3.0",
     "mysql2": "^1.6.4",
